--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>i200432_ClassTask_5</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello There, welcome to my application!</h1>
     <br />
     <h2>Please Enter Your Details below:</h2>
     <br />
     <form action="/submit" method="post">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
-        <button type="submit" id="submit">Submit</button>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br /><br />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+      <button type="submit" id="submit">Submit</button>
     </form>
     <br />
 
@@ -24,5 +24,18 @@
       <p>{{ status }}</p>
     </div>
     {% endif %}
-</body>
+
+    <br />
+
+    {% if status %}
+    <div id="userList">
+      <h2>Existing Users:</h2>
+      <ul>
+        {% for user in users %}
+        <li>{{ user.name }} - {{ user.email }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endif %}
+  </body>
 </html>
